# netoapi

./: README.md  pyproject.toml
netoapi/: __init__.py  api_client.py  api_session.py
netoapi.egg-info/: PKG-INFO
src/: __init__.py  api_call.py  api_client.py  api_session.py  errors.py
tests/: __init__.py
