[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "netoapi"
version = "0.0.1"
authors = [
  { name="Dan Hobday", email="author@example.com" },
]
description = "A Python API client for the Neto Ecommerce platform"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/dan-hobday/netoapi"
"Bug Tracker" = "https://github.com/dan-hobday/netoapi/issues"